<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2013 Aubort Jean-Baptiste (Rorist)
    Licensed under GNU's GPL 3, see README
-->
<resources>

    <string name="app_name">MyHackerspace</string>
    <string name="empty"></string>
    <string name="ok">OK</string>

    <string name="ui_logo">Logo of the hackerspace</string>
    <string name="ui_name">FIXME</string>
    <string name="ui_url">https://fixme.ch</string>
    <string name="ui_image_status">Status image of the hackerspace</string>

    <string name="choose_hs">Choose a hackerspace</string>
    <string name="choose_time">Choose an update interval in minutes: </string>
    <string name="choose_time_default">30</string>
    <string name="choose_transparency">Widget\'s transparency</string>
    <string name="choose_text">Widget\'s text</string>

    <string name="btn_refresh">Refresh</string>
    <string name="btn_prefs">Preferences</string>

    <string name="msg_loading">Loading…</string>
    <string name="error_title">Error: </string>
    <string name="error_network_title">Network</string>
    <string name="error_network_msg">Network unreachable</string>
    <string name="error_generic">\n\nCheck that the API conforms to the level it actually declares!\n\nSee http://spaceapi.net</string>

    <string name="prefs_api_title">SpaceAPI Endpoint</string>
    <string name="prefs_api_summary">URL to the global SpaceAPI directory (directory.json file)\nExamples:\nhttps://spaceapi.fixme.ch/directory.json\nhttp://spaceapi.net/directory.json</string>
    <string name="prefs_api_url_title">Current hackerspace API</string>
    <string name="prefs_api_url_summary">Override current hackerspace URL (will be lost when choosing an other hackerspace in the list)</string>
    <string name="prefs_interval_title">Check interval</string>
    <string name="prefs_interval_summary">Interval in minutes to check the status in the widget</string>
    <string name="prefs_transparent_title">Show transparent background</string>
    <string name="prefs_transparent_summary">Widget\'s background will be transparent instead of gray</string>
    <string name="prefs_text_title">Show status text</string>
    <string name="prefs_text_summary">Add a text with the status under the widget</string>

    <string name="api_status">Status</string>
    <string name="api_lastchange">Last change: </string>
    <string name="api_duration">Duration: </string>
    <string name="api_duration_hours"> hour(s)</string>
    <string name="api_location">Location</string>
    <string name="api_contact">Contact</string>
    <string name="api_stream">Stream</string>
    <string name="api_sensors">Sensors</string>

</resources>
