<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2013 Aubort Jean-Baptiste (Rorist)
    Licensed under GNU's GPL 2, see README
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_choose"
        android:icon="@android:drawable/ic_input_get"
        android:showAsAction="ifRoom|withText"
        android:title="@string/choose_hs"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@+drawable/ic_action_refresh"
        android:showAsAction="ifRoom|withText"
        android:title="@string/btn_refresh"/>
    
    <item
        android:id="@+id/menu_prefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/btn_prefs"/>
</menu>
